correct padding of featres block on tablets

--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -101,7 +101,7 @@
     text-align: left;
 
     &--mood {
-      padding-top: 73px;
+      padding-top: 75px;
     }
 
     &--friends {
